changed emoji field to score with values from 0 to 5

--- a/projects/angular2-feedback/src/lib/angular2-feedback/angular2-feedback.component.html
+++ b/projects/angular2-feedback/src/lib/angular2-feedback/angular2-feedback.component.html
@@ -9,11 +9,8 @@
   >
     {{ feedbackWidgetOptions.buttonText }}
   </button>
-  <div
-    *ngIf="isFeedbackFinished"
-    class="feedback-widget__feedback-success"
-  >
+  <div *ngIf="isFeedbackFinished" class="feedback-widget__feedback-success">
     <button class="feedback-btn__feedback-success" type="button" (click)="this.isFeedbackFinished = false"></button>
-    {{ feedbackWidgetOptions.feedbackSuccessTitle }}
+    <span> {{ feedbackWidgetOptions.feedbackSuccessTitle }} </span>
   </div>
   <ng-template #feedbackWidgetDialog></ng-template>
