--- a/projects/angular2-feedback/src/lib/angular2-feedback/angular2-feedback.component.html
+++ b/projects/angular2-feedback/src/lib/angular2-feedback/angular2-feedback.component.html
@@ -1,9 +1,8 @@
   <button
-    id="feedback-widget-btn"
     #feedbackBtn
-    class="fw-btn fw-fixed {{feedbackWidgetOptions.buttonClass}}
-           fw-position--{{feedbackWidgetOptions.feedbackPosition}}
-           fw-position--{{feedbackWidgetOptions.feedbackPosition}}-rotate
+    id="feedback-widget-button"
+    class="fw-btn fw-btn--fixed {{feedbackWidgetOptions.buttonClass}}
+           fw-btn--{{feedbackWidgetOptions.feedbackPosition}}
            fw-btn--{{feedbackWidgetOptions.buttonSize}}"
     (click)="onFeedbackStart()"
   >
