updated main dialog styles

--- a/projects/angular2-feedback/src/lib/feedback-widget-dialog/feedback-widget-dialog.component.html
+++ b/projects/angular2-feedback/src/lib/feedback-widget-dialog/feedback-widget-dialog.component.html
@@ -1,30 +1,23 @@
-<div #feedbackDialog class="feedback-dialog feedback-dialog--{{feedbackDialogPosition}} feedback-dialog--arise">
-  <div
-    [formGroup]="feedbackForm"
-    class="feedback-dialog__container fw-flex--column fw-flex--align-center"
-  >
-    <button
-      id="fw-btn-close"
-      class="feedback-btn__close"
-      (click)="onFeedbackDialogClosed()"
-    ></button>
-    <p
-      *ngIf="feedbackForm.get('score').value === null"
-      class="feedback__title-intro"> {{ feedbackRateTitle }}
+<div #feedbackDialog class="fw-dialog fw-dialog--{{feedbackDialogPosition}} fw-dialog--arise">
+  <div [formGroup]="feedbackForm" class="fw-dialog__container">
+    <button id="fw-btn-close" class="fw-dialog__btn-close" (click)="onFeedbackDialogClosed()"></button>
+    <p *ngIf="feedbackForm.get('score').value === null" class="fw-dialog__title-intro">
+      {{ feedbackRateTitle }}
     </p>
     <feedback-emoji-list
       *ngIf="!isFeedbackSubmitted"
       formControlName="score"
-      [feedbackEmojis]="feedbackEmojis">
+      [feedbackEmojis]="feedbackEmojiNames">
     </feedback-emoji-list>
     <ng-container *ngIf="feedbackForm.get('score').value !== null && !this.isFeedbackSubmitted">
       <feedback-textarea [placeholder]="feedbackPlaceholder" formControlName="feedback"></feedback-textarea>
       <feedback-screenshot></feedback-screenshot>
-      <div class="fw-flex--end-center feedback-submit__container">
+      <div class="fw-dialog__submit-container">
         <button
-          class="feedback-btn feedback-btn__submit"
-          [disabled]="feedbackForm.get('feedback').invalid"
           type="button"
+          class="fw-btn
+          fw-btn__submit"
+          [disabled]="feedbackForm.get('feedback').invalid"
           (click)="onFeedbackSubmit()"
         >
           Send
@@ -33,18 +26,14 @@
     </ng-container>
 
     <ng-container *ngIf="isFeedbackSubmitted">
-      <p class="feedback-title__email">{{ feedbackEmailTitle }}</p>
+      <p class="fw-dialog__email-title">{{ feedbackEmailTitle }}</p>
       <feedback-input type="email" formControlName="email"></feedback-input>
-      <div class="fw-flex--end-center feedback-submit__container">
-        <button
-          class="feedback-btn feedback-btn__skip"
-          type="button"
-          (click)="onSubmit(false)"
-        >
+      <div class="fw-dialog__submit-container">
+        <button type="button" class="fw-btn fw-btn__skip" (click)="onSubmit(false)">
           Skip
         </button>
         <button
-          class="feedback-btn feedback-btn__submit"
+          class="fw-btn fw-btn__submit"
           type="button"
           [disabled]="feedbackForm.get('email').invalid"
           (click)="onSubmit(true)"
