--- a/projects/angular2-feedback/src/lib/feedback-widget-dialog/feedback-widget-dialog.component.css
+++ b/projects/angular2-feedback/src/lib/feedback-widget-dialog/feedback-widget-dialog.component.css
@@ -1,3 +1,30 @@
+.fw-dialog {
+  position: fixed;
+  width: 290px;
+  bottom: 200px;
+  z-index: 999;
+}
+
+.fw-dialog--left {
+  left: 60px;
+}
+
+.fw-dialog--right {
+  right: 60px;
+}
+
+.fw-dialog--left.fw-dialog--arise {
+  animation-name: fadein, moveRight;
+  animation-iteration-count: 1;
+  animation-duration: 1s;
+}
+
+.fw-dialog--right.fw-dialog--arise {
+  animation-name: fadein, moveLeft;
+  animation-iteration-count: 1;
+  animation-duration: 1s;
+}
+
 .fw-flex {
   display: flex;
 }
@@ -34,7 +61,10 @@
   position: absolute;
 }
 
-.feedback-dialog__container {
+.fw-dialog__container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding: 16px 0 0 0;
   border-radius: 4px;
   background: #fff;
@@ -43,7 +73,7 @@
   -moz-box-shadow: 0 6px 100px 0 rgba(0,0,0,.35);
 }
 
-.feedback-btn__close {
+.fw-dialog__btn-close {
   position: absolute;
   top: -15px;
   right: 20px;
@@ -56,59 +86,70 @@
   border-radius: 50%;
 }
 
-.feedback-btn__close:after {
-  content: '+';
-  color: white;
+.fw-dialog__btn-close::after, .fw-dialog__btn-close::before {
+  position: absolute;
+  content: '';
   display: inline-block;
-  font-size: 25px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  -ms-transform: rotate(135deg);
-  transform: rotate(135deg);
+  background: #fff;
+  width: 12px;
+  height: 2px;
+  border-radius: 4px;
+  left: 50%;
+  top: 50%;
 }
 
-.feedback-submit__container {
+.fw-dialog__btn-close::after {
+  transform: translateY(-50%) translateX(-50%) rotate(45deg);
+}
+
+.fw-dialog__btn-close::before {
+  transform: translateY(-50%) translateX(-50%) rotate(-45deg);
+}
+
+.fw-dialog__submit-container {
   box-sizing: border-box;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   width: 100%;
   padding: 10px 20px;
 }
 
-.feedback-btn {
+.fw-btn {
   cursor: pointer;
   padding: 8px 15px;
   outline: none;
   border: none;
 }
 
-.feedback-btn__skip {
+.fw-btn__skip {
   background: transparent;
   text-decoration: underline;
   color: #d8d8d8;
   transition: color 200ms ease-in;
 }
 
-.feedback-btn__skip:hover {
+.fw-btn__skip:hover {
   color: #333;
 }
 
-.feedback-btn__submit {
+.fw-btn__submit {
   background: #ff4c4a;
   color: white;
   border-radius: 4px;
   transition: all 200ms ease-in;
 }
 
-.feedback-btn__submit:not(:disabled):hover {
+.fw-btn__submit:not(:disabled):hover {
   opacity: 0.6;
 }
 
-.feedback-btn__submit:disabled {
+.fw-btn__submit:disabled {
   color: #000;
   background: #d8d8d8;
 }
 
-.feedback__title-intro {
+.fw-dialog__title-intro {
   font-family: Arial, sans-serif;
   font-size: 16px;
   max-width: 250px;
@@ -116,34 +157,7 @@
   margin: 20px 0 0 0;
 }
 
-.feedback-dialog--right {
-  right: 60px;
-}
-
-.feedback-dialog {
-  position: fixed;
-  width: 290px;
-  bottom: 200px;
-  z-index: 999;
-}
-
-.feedback-dialog--left {
-  left: 60px;
-}
-
-.feedback-dialog--left.feedback-dialog--arise {
-  animation-name: fadein, moveRight;
-  animation-iteration-count: 1;
-  animation-duration: 1s;
-}
-
-.feedback-dialog--right.feedback-dialog--arise {
-  animation-name: fadein, moveLeft;
-  animation-iteration-count: 1;
-  animation-duration: 1s;
-}
-
-.feedback-title__email {
+.fw-dialog__email-title {
   margin: 0;
   padding: 20px 30px;
   font-size: 16px;
