--- a/projects/angular2-feedback/src/lib/feedback-input/feedback-input.component.html
+++ b/projects/angular2-feedback/src/lib/feedback-input/feedback-input.component.html
@@ -1,6 +1,6 @@
 <input
   id="feedback-widget-input"
-  class="feedback-input"
+  class="fw-input"
   [type]="type"
   [value]="value"
   [placeholder]="placeholder"
