--- a/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot.component.html
+++ b/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot.component.html
@@ -1,4 +1,4 @@
-<button class="feedback-screenshot__btn" (click)="onClick()"></button>
-<div class="feedback-screenshot__hint">
+<button class="fw-screenshot__btn" (click)="onClick()"></button>
+<div class="fw-screenshot__hint">
   {{ screenshotHintText }}
 </div>
