--- a/projects/angular2-feedback/src/lib/feedback-textarea/feedback-textarea.component.html
+++ b/projects/angular2-feedback/src/lib/feedback-textarea/feedback-textarea.component.html
@@ -1,7 +1,7 @@
 <textarea
   id="feedback-widget-textarea"
   name="feedback-widget-textarea"
-  class="feedback-textarea"
+  class="fw-textarea"
   [placeholder]="placeholder"
   [value]="value"
   (input)="onInput($event.target.value)"
