updated click subscription

--- a/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot.component.html
+++ b/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot.component.html
@@ -1,4 +1,4 @@
-<button class="fw-screenshot__btn" (click)="onClick()">
+<button id="fw-screenshot-button" class="fw-screenshot__btn" (click)="onClick()">
   <span
     #selectElementHint
     class="fw-screenshot__hint fw-screenshot__hint--first-loaded"
