--- a/projects/angular2-feedback/src/lib/angular2-feedback/angular2-feedback.component.css
+++ b/projects/angular2-feedback/src/lib/angular2-feedback/angular2-feedback.component.css
@@ -46,7 +46,7 @@
 /* default button class */
 .fw-btn--start {
   padding: 10px 12px;
-  background-color: #0f1aff;
+  background: #0f1aff;
   border-radius: 8px 8px 0 0;
   box-shadow: rgba(0,0,0,0.2) 0 0 45px 1px;
 }
