updated screenshot selection logic

--- a/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot-window/feedback-screenshot-window.component.html
+++ b/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot-window/feedback-screenshot-window.component.html
@@ -16,6 +16,7 @@
     </button>
   </div>
   <div
+    #contentHighlighter
     [ngClass]="{'fw-screenshot--selected': isElementSelected}"
     class="fw-screenshot__window-shade fw-screenshot__window-content-highlighter"
   >
