--- a/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot-window/feedback-screenshot-window.component.css
+++ b/projects/angular2-feedback/src/lib/feedback-screenshot/feedback-screenshot-window/feedback-screenshot-window.component.css
@@ -143,12 +143,13 @@
   position: relative;
   box-sizing: initial !important;
   background-color: transparent;
+  transition: outline ease-out 200ms;
   outline-offset: -2px;
   outline: 6px dashed salmon;
   border: none;
+  cursor: pointer;
   display: block;
   border-radius: 3px;
-  transition: outline-color ease-out 400ms;
   z-index: 1;
 }
 
